--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,4 @@ services:
     env: python
     pythonVersion: "3.12"
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py  # Replace with your actual start command
+    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker chieni:app --bind 0.0.0.0:5000
