--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
-services:
+services: 
   - type: web
     name: super1
     env: python
-    pythonVersion: "3.12"
+    pythonVersion: "3.12.0"  # <-- Full version now
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker chieni:app --bind 0.0.0.0:5000
